[tool.poetry]
name = "torch_logger"
version = "0.1.1"
description = "A minimalist package for logging best values of metrics when training models with PyTorch"
authors = ["Michael Moor"]
license = "BSD-3-Clause"
readme = "README.md"
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
